--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
@@ -15,10 +19,6 @@ h1 {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-html {
-  background-color: #ece9d8;
 }
 
 .App-header {
