--- a/src/components/Home/Home.styles.css
+++ b/src/components/Home/Home.styles.css
@@ -4,6 +4,50 @@
   flex-direction: column;
   align-items: center;
 }
-.home p {
+
+.home-content {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #e7e4dc;
+  overflow: hidden;
+  -webkit-box-shadow: 10px 10px 29px -2px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 10px 10px 29px -2px rgba(0, 0, 0, 0.7);
+  box-shadow: 10px 10px 29px -2px rgba(0, 0, 0, 0.7);
+}
+.home-content p {
   width: 60%;
+  text-align: center;
+}
+
+.image span {
+  margin: 20px auto;
+}
+
+img {
+  padding: 25px;
+  border-radius: 50%;
+  height: 350px;
+  width: 350px;
+}
+
+.text {
+  display: flex;
+  justify-content: center;
+}
+
+.type span {
+  font-size: 45px;
+  font-weight: bolder;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 30px;
+}
+
+.social-icons i {
+  color: #000000;
 }
