added start-menu and made sections draggable

--- a/src/components/Contact/Contact.styles.css
+++ b/src/components/Contact/Contact.styles.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   text-align: center;
   font-size: 10px;
+  background-color: #e7e4dc;
   /* align-items: center; */
 }
 
